# add-hr-to-fit

./: LICENSE  README.md  pyproject.toml  requirements.txt
add-hr-to-fit/: __main__.py
fit-tools/: __main__.py
