[project]
name = "fit-tools"
version = "0.2.0"
description = "A collection of tools for working with FIT files."
authors = [
    {name = "Aleksa Ognjanovic",email = "alexa.ognjanovic@protonmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fit-tool (>=0.9.13,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
